--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=Roboto:wght@200;300;400;500;700&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/png" href="src/images/favicon.png">
+
     <link rel="stylesheet" href="src/css/style.css">
     <title>Emojipedia | Means of your emojis</title>
   </head>
