--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,8 @@
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=Roboto:wght@200;300;400;500;700&display=swap" rel="stylesheet">
-
+  <!-- Favicon -->
+  <link rel="shortcut icon" type="image/png" href="src/images/favicon.png">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
