--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f4f4f2" />
-    <meta name="description" content="">
+    <meta name="theme-color" content="#222831" />
+    <meta name="description" content="Share the meanings of the emoji">
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=Roboto:wght@200;300;400;500;700&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
         <div class="category__box">
           <div class="category__emojiBg"><span>🐻</span></div>
           <h2 class="category__title">Animals & Nature</h2>
-          <p class="category__detail">Emojis for animals, nature, and weather.</p>
+          <p class="category__detail">Emojis for animals, nature or greens object, and weather.</p>
         </div>
       </a>
       <a href="./article-3.html" class="category__link">
