--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="theme-color" content="#2ec2b0">
+  <meta name="description" content="Login into emojipedia">
+  <meta name="theme-color" content="#563d7c">
 
   <title>Emojipedia Login</title>
 
