--- a/article-2.html
+++ b/article-2.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#f4f4f2" />
-  <meta name="description" content="">
+  <meta name="theme-color" content="#222831" />
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&family=Roboto:wght@200;300;400;500;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="src/images/favicon.png">
-  
+
   <link rel="stylesheet" href="src/css/article.css">
   <title>Emojipedia | Animals & Nature</title>
 </head>
